# Spectral-MPGNN

./: README.md  main.py  pyproject.toml
Spectral-MPGNN/: DatasetClass.py  InputNormalize.py  ProcessorLayer.py  conf.py  mask.py  model_SpectralMeshGraphNet.py  optim.py  train_test.py  visualize.py
Spectral-MPGNN/model/: model.py  model_pl.py  pl_general_model.py
config/: config.yaml
data/: processed_test_set.pt
experiment/: job_script.sh  train_model.py
experiment/checkpoints/: 1Dbar-epoch=13-val_loss=1.68.ckpt  1Dbar-epoch=14-val_loss=1.68.ckpt  1Dbar-epoch=17-val_loss=1.67.ckpt  1Dbar-epoch=20-val_loss=1.66.ckpt  1Dbar-epoch=21-val_loss=1.67.ckpt  1Dbar-epoch=22-val_loss=1.65.ckpt  1Dbar-epoch=24-val_loss=1.67.ckpt  1Dbar-epoch=25-val_loss=1.68.ckpt  1Dbar-epoch=26-val_loss=1.65.ckpt  1Dbar-epoch=29-val_loss=1.68.ckpt
experiment/logs/wandb/run-20250318_141348-crn3f3p3/: run-crn3f3p3.wandb
experiment/logs/wandb/run-20250318_141348-crn3f3p3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
experiment/logs/wandb/run-20250318_142802-bxh6e5v5/: run-bxh6e5v5.wandb
experiment/logs/wandb/run-20250318_142802-bxh6e5v5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
experiment/logs/wandb/run-20250319_163404-wa9obok2/: run-wa9obok2.wandb
notebooks/: GNN_1Dbar_w_X_StressType2.ipynb  test.ipynb
spectralMPGNN/data/: Custom_DataSet.py  Dataset_preparation.py  InputNormalize.py
spectralMPGNN/models/: general_model_L.py  model.py  model_L.py
spectralMPGNN/training/: training.py
(+5 files in other folders)
